@@ -16,8 +16,9 @@ package jp.root42.indolently.ref;
 import java.io.Serializable;
 import java.util.Objects;
 import java.util.function.BiConsumer;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.function.Function;
 
 import jp.root42.indolently.Destructive;
 
@@ -32,7 +33,7 @@ import static jp.root42.indolently.Indolently.*;
  * @author takahashikzn
  */
 public record $2<T1, T2>(T1 _1, T2 _2)
-    implements tuple2<T1, T2>, Serializable {
+    implements tpl2<$2<T1, T2>, T1, T2>, Serializable {
 
     public $2<T1, T2> _1(final T1 _1) { return tuple(_1, this._2); }
 
@@ -40,13 +41,23 @@ public record $2<T1, T2>(T1 _1, T2 _2)
 
     public $2<T2, T1> _21() { return tuple(this._2, this._1); }
 
-    public mutable<T1, T2> mutable() { return new mutable<T1, T2>()._1(this._1)._2(this._2); }
+    public mut<T1, T2> mut() { return new mut<T1, T2>().set(this._1, this._2); }
 
-    public static final class mutable<T1, T2>
-        implements tuple2<T1, T2>, Serializable, BiConsumer<T1, T2>, Supplier<mutable<T1, T2>>,
-        Consumer<mutable<T1, T2>> {
+    @Override
+    public <S1, S2> $2<S1, S2> map(final BiFunction<T1, T2, ? extends tpl2<?, ? extends S1, ? extends S2>> f) {
+        final var x = f.apply(this._1, this._2);
+        return x instanceof $2<?, ?> ? cast(x) : tuple(x._1(), x._2());
+    }
 
-        private mutable() { }
+    @Override
+    public <S1, S2> $2<S1, S2> map(final Function<T1, ? extends S1> f1, final Function<T2, ? extends S2> f2) {
+        return this.map((__1, __2) -> tuple(f1.apply(__1), f2.apply(__2)));
+    }
+
+    public static final class mut<T1, T2>
+        implements tpl2<mut<T1, T2>, T1, T2>, Serializable, BiConsumer<T1, T2>, Consumer<tpl2<?, T1, T2>> {
+
+        private mut() { }
 
         @SuppressWarnings("PublicField")
         public T1 _1; // NOPMD
@@ -54,26 +65,34 @@ public record $2<T1, T2>(T1 _1, T2 _2)
         @SuppressWarnings("PublicField")
         public T2 _2; // NOPMD
 
-        @Destructive
         @Override
-        public void accept(final mutable<T1, T2> that) {
-            this._1 = that._1;
-            this._2 = that._2;
+        public <S1, S2> mut<S1, S2> map(final BiFunction<T1, T2, ? extends tpl2<?, ? extends S1, ? extends S2>> f) {
+            final var x = f.apply(this._1, this._2);
+            return x instanceof mut<?, ?> ? cast(x) : new mut<S1, S2>().set(x._1(), x._2());
+        }
+
+        @Override
+        public <S1, S2> mut<S1, S2> map(final Function<T1, ? extends S1> f1, final Function<T2, ? extends S2> f2) {
+            return this.map((__1, __2) -> tuple(f1.apply(__1), f2.apply(__2)));
         }
 
         @Destructive
-        public mutable<T1, T2> set(final mutable<? extends T1, ? extends T2> that) {
+        @Override
+        public void accept(final tpl2<?, T1, T2> that) {
+            this._1 = that._1();
+            this._2 = that._2();
+        }
+
+        @Destructive
+        public mut<T1, T2> set(final mut<? extends T1, ? extends T2> that) {
             return (that == null) ? this.set(null, null) : this.set(that._1, that._2);
         }
 
         @Destructive
-        public mutable<T1, T2> set(final T1 _1, final T2 _2) {
+        public mut<T1, T2> set(final T1 _1, final T2 _2) {
             this.accept(_1, _2);
             return this;
         }
-
-        @Override
-        public mutable<T1, T2> get() { return this; }
 
         @Destructive
         @Override
@@ -86,7 +105,7 @@ public record $2<T1, T2>(T1 _1, T2 _2)
         public T1 _1() { return this._1; }
 
         @Destructive
-        public mutable<T1, T2> _1(final T1 _1) {
+        public mut<T1, T2> _1(final T1 _1) {
             this._1 = _1;
             return this;
         }
@@ -95,24 +114,24 @@ public record $2<T1, T2>(T1 _1, T2 _2)
         public T2 _2() { return this._2; }
 
         @Destructive
-        public mutable<T1, T2> _2(final T2 _2) {
+        public mut<T1, T2> _2(final T2 _2) {
             this._2 = _2;
             return this;
         }
 
-        public mutable<T2, T1> _21() { return tuple(this._2, this._1).mutable(); }
+        public mut<T2, T1> _21() { return tuple(this._2, this._1).mut(); }
 
-        public $2<T1, T2> immutable() { return tuple(this._1, this._2); }
+        public $2<T1, T2> immut() { return tuple(this._1, this._2); }
 
         @Override
         public int hashCode() { return Objects.hash(this.getClass(), this._1, this._2); }
 
         @Override
         public boolean equals(final Object o) {
-            return this == o || (o instanceof $2.mutable that && equiv(this._1, that._1) && equiv(this._2, that._2));
+            return this == o || (o instanceof final mut<?, ?> that && this.equiv(that));
         }
 
         @Override
-        public String toString() { return String.format("(%s, %s)", this._1, this._2); }
+        public String toString() { return "(%s, %s)".formatted(this._1, this._2); }
     }
 }
